Fixed too excessive spacing when sidebar is expanded

--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -27,7 +27,6 @@ react-module
     height: 100vh;
 
     width: calc(100vw - var(--size-app-sidebar-width-expanded));
-    left: var(--size-app-sidebar-width-expanded);
 
     .sideMenu--collapsed &
     {
